--- a/CSS/enviar-exames.css
+++ b/CSS/enviar-exames.css
@@ -22,7 +22,7 @@ header {
 }
 
 img {
-    width: 300px; 
+    width: 200px; 
     margin-bottom: 15px;
     align-items: right;
 
@@ -36,7 +36,7 @@ h1 {
 
 .container {
     max-width: 600px;
-    margin: 50px auto;
+    margin: 30px auto;
     padding: 30px;
     background-color: white;
     border-radius: 10px;
@@ -103,4 +103,7 @@ hr {
 
 .data-envio {
     color: #777; 
+}
+.login {
+    text-align: center; 
 }
