--- a/CSS/agendamento.css
+++ b/CSS/agendamento.css
@@ -21,7 +21,7 @@ header {
 }
 
 img {
-    width: 300px;
+    width: 200px;
     margin-bottom: 15px;
 }
 
@@ -33,7 +33,7 @@ h1 {
 
 .container {
     max-width: 500px;
-    margin: 50px auto;
+    margin: 20px auto;
     padding: 30px;
     background-color: white;
     border-radius: 10px;
@@ -85,4 +85,7 @@ header {
     padding: 1px;
     background-color: transparent;
     color: #ffffff;
+}
+.login {
+    text-align: center; 
 }
