--- a/CSS/gestao-pacientes.css
+++ b/CSS/gestao-pacientes.css
@@ -23,7 +23,7 @@ header {
 }
 
 img {
-    width: 300px;
+    width: 200px;
     margin-bottom: 15px;
 }
 
@@ -33,8 +33,8 @@ h1 {
     font-size: 24px;
 }
 .container {
-    max-width: 600px;
-    margin: 50px auto;
+    max-width: 500px;
+    margin: 1px auto;
     padding: 30px;
     background-color: white;
     border-radius: 10px;
@@ -50,7 +50,7 @@ h2 {
 
 label {
     display: block;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
     font-weight: bold;
     color: #555;
 }
@@ -65,6 +65,7 @@ input {
 
 button {
     width: 100%;
+    
     padding: 12px;
     background-color: #37d8b8;
     color: white;
@@ -86,4 +87,7 @@ header {
     padding: 1px;
     background-color: transparent;
     color: #333;
+}
+.login {
+    text-align: center; 
 }
