--- a/CSS/prontuarios.css
+++ b/CSS/prontuarios.css
@@ -21,7 +21,7 @@ header {
 }
 
 img {
-    width: 300px;
+    width: 200px;
     margin-bottom: 15px;
 }
 
@@ -94,4 +94,7 @@ header {
     padding: 1px;
     background-color: transparent;
     color: #333(0, 0, 0);
+}
+.login {
+    text-align: center; 
 }
